--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
       }
 
       .swatch {
-        width: 26px;
-        height: 26px;
+        width: 74px;
+        height: 74px;
         border-radius: 50%;
         border: 2px solid #ffffff;
         box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.08);
@@ -379,6 +379,18 @@
       .site-link:hover {
         background: rgba(199, 101, 59, 0.09);
       }
+
+      .footer-logo {
+        margin-top: 22px;
+        display: flex;
+        justify-content: center;
+      }
+
+      .footer-logo img {
+        width: 120px;      /* ajusta o tamanho aqui se quiser maior/menor */
+        height: auto;
+      }
+
 
       @media (max-width: 720px) {
         body {
@@ -549,6 +561,10 @@
           >
             Acessar o site
           </a>
+
+          <div class="footer-logo">
+            <img src"images/logo.png" alt="Monograma Anne Gabrielle e Carlos Lucena"
+          </div>
         </section>
       </div>
     </main>
