envio de logo no final da pagina

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         <section class="center">
           <div class="hero-subtitle">Manual dos</div>
           <h1 class="hero-title">Padrinhos</h1>
-          <div class="hero-names">Anne e Carlos</div>
+          <div class="hero-names">Anne Gabrielle e Carlos Lucena</div>
           <div class="hero-date">28 • 03 • 26</div>
         </section>
 
@@ -563,7 +563,10 @@
           </a>
 
           <div class="footer-logo">
-            <img src"images/logo.png" alt="Monograma Anne Gabrielle e Carlos Lucena"
+            <img
+              src="images/logo.png"
+              alt="Monograma Anne Gabrielle e Carlos Lucena"
+            />
           </div>
         </section>
       </div>
