--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <meta name="color-scheme" content="light">
     <title>Manual dos Padrinhos - Anne e Carlos</title>
 
     <!-- Fonts -->
@@ -32,6 +33,10 @@
 
       * {
         box-sizing: border-box;
+      }
+      html {
+        color-scheme: light;        /* reforça que o site é claro */
+        background: var(--bg-page);
       }
 
       body {
